# password-generator

./: .gitignore  README.md  pyproject.toml
src/password_generator/: __main__.py  password_generator.py
tests/: test_password_generator.py
