[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "password_generator"
version = "0.0.1"
authors = [
  { name="Alexander Biba", email="alexbiba@gmail.com" },
]
description = "A simple password generator"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alex152/password-generator"
"Bug Tracker" = "https://github.com/alex152/password-generator/issues"
